--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="logo-web link" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <ul class="title-link list">
                     <li class="title-list"><a class="title-list-link link" href="./index.html">Studio</a></li>
-                    <li class="title-list"><a class="title-list-link link" href="./portfolio.html" target="">Portfolio</a></li>
+                    <li class="title-list"><a class="title-list-link link" href="./portfolio.html">Portfolio</a></li>
                     <li class="title-list"><a class="title-list-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
