--- a/portfolio.html
+++ b/portfolio.html
@@ -259,6 +259,8 @@
                         </li>
                     </ul>
                 </div>
+                <div class="form_input">
+                </div>
             </div>
         </footer>
         
