--- a/index.html
+++ b/index.html
@@ -363,6 +363,8 @@
                     </li>
                 </ul>
             </div>
+            <div class="form_input">
+            </div>
         </div>
     </footer>
 
