--- a/portfolio.html
+++ b/portfolio.html
@@ -265,8 +265,7 @@
                 <form class="form_input_text">
                     <label class="form_input_tab">
                         <input class="email_text" name="email" type="email" placeholder="E-mail">
-                        <button class="form_input_button" type="submit">
-                            Subscribe
+                        <button class="form_input_button" type="submit">Subscribe
                         <svg class="form_button_logo" width="24" height="24">
                             <use href="./images/icons.svg#icon-Frame-3"></use>
                         </svg></button>
