--- a/index.html
+++ b/index.html
@@ -371,9 +371,10 @@
                     <input class="email_text" name="email" type="email" placeholder="E-mail">
                     <button class="form_input_button" type="submit">
                         Subscribe
-                    <svg class="form_button_logo" width="24" height="24">
+                        <svg class="form_button_logo" width="24" height="24">
                         <use href="./images/icons.svg#icon-Frame-3"></use>
-                    </svg></button>
+                        </svg>
+                    </button>
                 </label>
             </form>
         </div>
