--- a/portfolio.html
+++ b/portfolio.html
@@ -266,8 +266,11 @@
                     <label class="form_input_tab">
                         <input class="email_text" name="email" type="email" placeholder="E-mail">
                         <button class="form_input_button" type="submit">
-                            Subscribe<svg class="form_button_logo" width="24" height="24">
-                            <use href="./images/icons.svg#icon-Frame-3"></use></svg></button>
+                            Subscribe
+                            <svg class="form_button_logo" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Frame-3"></use>
+                            </svg>
+                        </button>
                     </label>
                 </form>
             </div>
