--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
                 </form>
             </div>
         </div>
-
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
+        <p class="backdrop_paragraph"></p>
         <div class="modal">
             <button class="button_modal" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8"> 
