--- a/index.html
+++ b/index.html
@@ -388,6 +388,43 @@
                 </svg>
             </button>
             <p class="backdrop_paragraph"></p>
+            <form>
+                <div class="backdrop_section">
+                    <label class="form_name" for="user-name">
+                        Name
+                    </label>
+                    <div class="form_logo_input">
+                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <svg class="form_logo_user" width="18" height="24">
+                            <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="backdrop_section">
+                    <label class="form_name" for="user-name">
+                        Phone
+                    </label>
+                    <div class="form_logo_input">
+                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <svg class="form_logo_user" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="backdrop_section">
+                    <label class="form_name" for="user-name">
+                        Phone
+                    </label>
+                    <div class="form_logo_input">
+                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <svg class="form_logo_user" width="18" height="24">
+                            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 
