--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name">
-                        Phone
+                        Email
                     </label>
                     <div class="form_logo_input">
                         <input class="form_input_user" id="user-name" name="user-name" type="text"/>
