--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
                     </div>
-                </div>
+                </div>-->
             </form>
         </div>
     </div>
--->
+
     <script src="./js/modal.js"></script>
 
 </body>
