--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
                 </svg>
             </button>
-            <p class="backdrop_paragraph"></p>
+            <p class="backdrop_paragraph">Leave your contacts and we will call you back</p>
             <form>
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name">
@@ -396,25 +396,25 @@
                     
                     <div class="form_logo_input">
                         <input class="form_input_user" id="user-name" name="user-name" type="text"/>
-                        <svg class="form_logo_user" width="18" height="24">
+                        <svg class="form_logo_user fillcolor_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                         </svg>
                     </div>   
                     
                 </div>
-<!--
+
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name">
                         Phone
                     </label>
                     <div class="form_logo_input">
-                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <input class="form_input_user" id="user-name" name="user-name" type="number"/>
                         <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>
                     </div>
                 </div>
-
+<!--
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name">
                         Email
