--- a/index.html
+++ b/index.html
@@ -407,16 +407,16 @@
                     <label class="form_name" for="user-name">
                         Phone
                     </label>
-<!--
-                    <div class="form_logo_input">
+
+                   <!-- <div class="form_logo_input">
                         <input class="form_input_user" id="user-name" name="user-name" type="text"/>
                         <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>
-                    </div>
+                    </div>-->
 
                 </div>
-
+<!--
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name">
                         Email
