--- a/index.html
+++ b/index.html
@@ -408,12 +408,12 @@
                         Phone
                     </label>
 
-                   <!-- <div class="form_logo_input">
+                    <div class="form_logo_input">
                         <input class="form_input_user" id="user-name" name="user-name" type="text"/>
                         <svg class="form_logo_user" width="18" height="24">
-                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                           <!-- <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>-->
                         </svg>
-                    </div>-->
+                    </div>
 
                 </div>
 <!--
