--- a/index.html
+++ b/index.html
@@ -404,12 +404,12 @@
                 </div>
 
                 <div class="backdrop_section">
-                    <label class="form_name" for="user-name">
+                    <label class="form_name" for="user-name_phone">
                         Phone
                     </label>
 
                     <div class="form_logo_input">
-                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <input class="form_input_user" id="user-name_phone" name="user-name" type="text"/>
                        <!-- <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>-->
