--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@
 
                     <div class="form_logo_input">
                         <input class="form_input_user" id="user-name_phone" name="user-name" type="text"/>
-                       <!-- <svg class="form_logo_user" width="18" height="24">
+                        <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                        </svg>-->
+                        </svg>
                     </div>
 
                 </div>
