--- a/index.html
+++ b/index.html
@@ -400,7 +400,6 @@
                             <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                         </svg>
                     </div>   
-                    
                 </div>
 
                 <div class="backdrop_section">
@@ -414,20 +413,20 @@
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>
                     </div>
-
                 </div>
-<!--
+
                 <div class="backdrop_section">
-                    <label class="form_name" for="user-name">
+                    <label class="form_name_email" for="user-name">
                         Email
                     </label>
+
                     <div class="form_logo_input">
-                        <input class="form_input_user" id="user-name" name="user-name" type="text"/>
+                        <input class="form_input_user" id="form_name_email" name="user-name" type="text"/>
                         <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
                     </div>
-                </div>-->
+                </div>
             </form>
         </div>
     </div>
