--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 </div>
 
                 <div class="backdrop_section">
-                    <label class="form_name_email" for="user-name">
+                    <label class="form_name" for="user-name_email">
                         Email
                     </label>
 
