--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         </svg>
                     </div>
                 </div>
-
+<!--
                 <div class="backdrop_section">
                     <label class="form_name" for="user-name_email">
                         Email
@@ -426,7 +426,7 @@
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
                     </div>
-                </div>
+                </div>-->
             </form>
         </div>
     </div>
