--- a/index.html
+++ b/index.html
@@ -416,12 +416,12 @@
                 </div>
 
                 <div class="backdrop_section">
-                   <!-- <label class="form_name" for="user-name_email">
+                    <label class="form_name" for="user-name_email">
                         Email
-                    </label>-->
+                    </label>
 
                     <div class="form_logo_input">
-                        <input class="form_input_user" id="form_name_email" name="user-name" type="text"/>
+                        <input class="form_input_user" id="user-name_email" name="user-name" type="text"/>
                         <svg class="form_logo_user" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
