--- a/index.html
+++ b/index.html
@@ -427,6 +427,20 @@
                         </svg>
                     </div>
                 </div>
+
+                <div class="form_text_input">
+                    <label class="form_name" for="user-comment">
+                        Comment
+                    </label>
+
+                    <textarea class="text_input_user" id="user-comment" name="user-comment" placeholder="Text input">
+                    </textarea>
+
+                </div>
+
+                <div class="form_button_input">
+
+                </div>
             </form>
         </div>
     </div>
