--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@
                         Comment
                     </label>
 
-                    <textarea class="text_input_user" id="user-comment" name="user-comment" placeholder="Text input">
-                    </textarea>
+                    <textarea class="text_input_user" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
 
                 </div>
 
