--- a/index.html
+++ b/index.html
@@ -434,11 +434,18 @@
                     </label>
 
                     <textarea class="text_input_user" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
-
                 </div>
 
                 <div class="form_button_input">
-
+                    <input class="user-privacy visually-hidden" name="user-privacy" id="user-privacy" type="checkbox" value="true"/>
+                    <label class="user-privacy-text" for="user-privacy">
+                        <span class="user-privacy-policy">
+                            <svg class="privacy-policy-vector" width="10" height="8">
+                                <use href="./images/icons.svg#icon-Vector"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the  
+                    </label>
                 </div>
             </form>
         </div>
