--- a/index.html
+++ b/index.html
@@ -444,9 +444,12 @@
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the  
+                        I accept the terms and conditions of the 
+                        <a class="user-privacy-link" href="">Privacy Policy</a> 
                     </label>
                 </div>
+
+                <button class="user-button-input"> Send</button>
             </form>
         </div>
     </div>
