--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="main-board">
         <div class="main_container container">
             <h1 class="main-board-title">Effective Solutions for Your Business</h1>
-            <button class="main-board-button" type="button" data-modal-open>Order Service</button>
+            <button class="main-board-button butstyle" type="button" data-modal-open>Order Service</button>
         </div>
     </section>
     
@@ -369,7 +369,7 @@
                     <label class="form_input_tab">
                         <input class="email_text" name="email" type="email" placeholder="E-mail"/>
                     </label>
-                    <button class="form_input_button" type="submit">
+                    <button class="form_input_button butstyle" type="submit">
                         Subscribe
                         <svg class="form_button_logo" width="24" height="24">
                             <use href="./images/icons.svg#icon-Frame-3"></use>
