--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     </label>
                 </div>
 
-                <button class="user-button-input"> Send</button>
+                <button class="user-button-input butstyle"> Send</button>
             </form>
         </div>
     </div>
