--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         
             <address class="title-adress">
                 <ul class="title-adress-list list">
-                    <li class="title-list"><a class="title-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="title-list"><a class="title-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li><a class="title-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="title-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
