--- a/portfolio.html
+++ b/portfolio.html
@@ -265,7 +265,7 @@
                         <label class="form_input_tab">
                             <input class="email_text" name="email" type="email" placeholder="E-mail"/>
                         </label>
-                        <button class="form_input_button" type="submit">
+                        <button class="form_input_button butstyle" type="submit">
                             Subscribe
                             <svg class="form_button_logo" width="24" height="24">
                                 <use href="./images/icons.svg#icon-Frame-3"></use>
